Mejora de Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ ul{
   flex-direction: column;
   flex: 1;
 
-  font-family: 'Roboto, sans-serif';
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 500;
 }
 
