--- a/src/pages/CartillaEspecialista/styles.css
+++ b/src/pages/CartillaEspecialista/styles.css
@@ -40,6 +40,10 @@
         font-size: 2rem;
     }
 
+    .cartilla, .cartilla .resultado-card {
+        font-size: 1.2rem;
+    }
+
 }
 
 @media (max-width: 500px) {
