--- a/src/pages/turnos.css
+++ b/src/pages/turnos.css
@@ -1,10 +1,10 @@
-.web-baground {
+/* .web-baground {
   background: url(../assets/web-background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+} */
 
 .inicio{
   background: url(../assets/background-inicio.jpg) no-repeat center center fixed;
