--- a/src/pages/turnos.css
+++ b/src/pages/turnos.css
@@ -26,12 +26,12 @@
   transform: translate(-50%, -50%);
 }
 
-.turno-cards-info {
+/* .turno-cards-info {
   position: fixed;
   top: 50%;
   right: 25%;
   transform: translate(-50%, -50%);
-}
+} */
 
 .turno-cards-user {
   position: fixed;
@@ -39,3 +39,4 @@
   left: 25%;
   transform: translate(-50%, -50%);
 }
+
