--- a/src/pages/turnos.css
+++ b/src/pages/turnos.css
@@ -1,10 +1,10 @@
-/* .web-baground {
+.web-baground {
   background: url(../assets/web-background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-} */
+}
 
 .inicio{
   background: url(../assets/background-inicio.jpg) no-repeat center center fixed;
@@ -26,17 +26,4 @@
   transform: translate(-50%, -50%);
 }
 
-/* .turno-cards-info {
-  position: fixed;
-  top: 50%;
-  right: 25%;
-  transform: translate(-50%, -50%);
-} */
-
-.turno-cards-user {
-  position: fixed;
-  top: 50%;
-  left: 25%;
-  transform: translate(-50%, -50%);
-}
 
