--- a/src/ui/Footer/styles.css
+++ b/src/ui/Footer/styles.css
@@ -1,4 +1,4 @@
-footer{
+footer {
     min-height: 10vh;
     background-color: #010101;
     color: #f1f1f1;
@@ -12,7 +12,6 @@ footer{
 
 @media screen and (max-width: 900px) {
     footer {
-        min-height: 20vh;
-        font-size: 18px;
+        display: none;
     }
 }
