--- a/src/ui/Navbar/styles.css
+++ b/src/ui/Navbar/styles.css
@@ -35,6 +35,8 @@
     border-radius: 5px;
     border: solid transparent 1px;
     color: #f1f1f1;
+    text-align: center;
+    vertical-align: center;
 }
 
 .navbar .toggle-menu .items .item.active{
@@ -76,7 +78,7 @@
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     .toggle-menu-btn {
         display: block;
         cursor: pointer;
