--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ main {
 }
 
 .inicio{
-  background: url(../assets/background-inicio.jpg) no-repeat center center fixed;
+  background: url(./assets/background-inicio.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
